# context-sync

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-instructions.md  pyproject.toml
.claude/: settings.json
docs/: adr.md  coding-guidelines.md  design.md  execution-model.md  future-work.md  implementation-plan.md  linear-client-issues.md  linear-client-v1.1.0-issues.md  problem-statement.md  workspace-setup.md
docs/design/: 0-top-level-design.md  dependency-map.md  linear-client-v1.0.0.md  linear-client.md  linear-domain-coverage-audit-v1.0.0.md  linear-domain-coverage-audit-v1.1.0.md  linear-domain-coverage-audit.md  refresh-freshness-validation.md
docs/execution/: 26.03.15 - ADR review.md  M1-1-review.md  M1-1.md  M1-2-review.md  M1-2.md  M1-D1-review.md  M1-D1.md  M1-D2-review.md  M1-D2.md  M1-D3-review.md  M1-D3.md  M1-O1-review.md  M1-O1.md  M2-1-review.md  M2-1.md  M2-2-review.md  M2-2.md  M2-3-review.md  M2-3.md  M3-1-review.md  M3-1.md  M3-2-review.md  M3-2.md  M3-3-review.md  M3-3.md  M3-O1-review.md  M3-O1.md  M4-1-review.md  M4-1.md  M4-2-review.md  M4-2.md  M4-3-review.md  M4-3.md  M4-R1-review.md  M4-R1.md  M4-R2-review.md  M4-R2.md  M4.1-1-review.md  M4.1-1.md  M4.1-2-review.md  (+17 more)
docs/external-sources/: design.md
docs/planning/: 26.03.15 - ADR review.md  implementation-plan-review.md  implementation-plan.md
docs/planning/change-requests/: CR-1-review.md  CR-1.md  CR-26.03.18-review.md  CR-26.03.18.md  CR-26.03.23-review.md  CR-26.03.23.md  CR-26.03.24-policy-compliance-review.md  CR-26.03.24-policy-compliance.md  CR-26.03.24-review.md  CR-26.03.24.md  CR-26.04.07-review.md  CR-26.04.07.md
docs/policies/: agent-entrypoints.cfg  agent-instructions.cfg  agent-instructions.md  coding-guidelines.md  execution-model.md  terminology.md
docs/policies/common/: agent-instructions.md  coding-guidelines.md  data-modeling.md  execution-model.md
docs/policies/common/reviews/: code-review.md
docs/policies/common/tools/: sync_agent_instructions.py
docs/reference/review/: design-review.md
examples/: sync_workflow.py
scripts/: .linear_env.sh.sample  validate.sh
src/context_sync/: __init__.py  _cli.py  _config.py  _diff.py  _errors.py  _gateway.py  _io.py  _lock.py  _manifest.py  _models.py  _pipeline.py  _real_gateway.py  _renderer.py  _signatures.py  _sync.py  _testing.py  _ticket_ref.py  _traversal.py  _types.py  _yaml.py  version.py
tests/: __init__.py  conftest.py  test_add_remove_root.py  test_cli.py  test_config.py  test_diff.py  test_e2e.py  test_gateway.py  test_io.py  test_lock.py  test_manifest.py  test_models.py  test_package.py  test_pipeline.py  test_public_surface.py  test_real_gateway.py  test_refresh.py  test_renderer.py  test_signatures.py  test_sync.py  test_traversal.py  test_yaml.py
